[package]
name = "bungee"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.21", features = ["full"]}
async-trait = "0.1.36"
byteorder = "1.3.4"
