[package]
name = "bungee"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

workspaces = ["derive-packetdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.21", features = ["full"]}
async-trait = "0.1.36"
byteorder = "1.3.4"
serde = "1.0.114"
serde_json = "1.0.56"
derive-packetdata = {path = "./derive-packetdata"}
futures = "0.3.5"
quick-error = "1.2.3"
